cmake_minimum_required(VERSION 3.26)
project(C__)

set(CMAKE_CXX_STANDARD 14)

include_directories(Advanced/ClassTemplate)
include_directories(Advanced/ConstructorsExample)
include_directories(Advanced/ExplicitKeyword)
include_directories(Advanced/InheritanceAndPolymorphism)
include_directories(Advanced/OperatorOverloading)
include_directories(Advanced/OperatorOverloadingProblem)
include_directories(Advanced/SimpleOPP)
include_directories(Basics/FunctionFile/utils)
include_directories(practics)

add_executable(C__
        Advanced/ClassTemplate/main.cpp
        Advanced/ClassTemplate/Pair.cpp
        Advanced/ClassTemplate/Pair.h
        Advanced/ConstructorsExample/main.cpp
        Advanced/ConstructorsExample/Rectangle.cpp
        Advanced/ConstructorsExample/Rectangle.h
        Advanced/ExplicitKeyword/main.cpp
        Advanced/ExplicitKeyword/Person.cpp
        Advanced/ExplicitKeyword/Person.h
        Advanced/InheritanceAndPolymorphism/main.cpp
        Advanced/InheritanceAndPolymorphism/TextBox.cpp
        Advanced/InheritanceAndPolymorphism/TextBox.h
        Advanced/InheritanceAndPolymorphism/Widget.cpp
        Advanced/InheritanceAndPolymorphism/Widget.h
        Advanced/OperatorOverloading/Lengths.cpp
        Advanced/OperatorOverloading/Lengths.h
        Advanced/OperatorOverloading/main.cpp
        Advanced/OperatorOverloadingProblem/main.cpp
        Advanced/OperatorOverloadingProblem/Points.cpp
        Advanced/OperatorOverloadingProblem/Points.h
        Advanced/PointerToObject/main.cpp
        Advanced/SimpleOPP/main.cpp
        Advanced/SimpleOPP/Rectangle.cpp
        Advanced/SimpleOPP/Rectangle.h
        Advanced/SmartPointer/main.cpp
        Advanced/template/main.cpp
        Advanced/templateMultiple/main.cpp
        Basics/Arrays/main.cpp
        Basics/Conditions/main.cpp
        Basics/debugging/main.cpp
        Basics/FahrenheittoCelsius/main.cpp
        Basics/FunctionFile/utils/greet.cpp
        Basics/FunctionFile/utils/greet.hpp
        Basics/FunctionFile/main.cpp
        Basics/Functions/main.cpp
        Basics/Looping/main.cpp
        Basics/simple/main.cpp
        Basics/VariableInitial/main.cpp
        intermediate/ArraysPointers/main.cpp
        intermediate/ArraysStructures/main.cpp
        intermediate/bubbleSort/main.cpp
        intermediate/Dynamic_Memory_Allocation/main.cpp
        intermediate/Enumerations/main.cpp
        intermediate/ExtractingSubstring/main.cpp
        intermediate/FileStreams/main.cpp
        intermediate/LinearSearchAlgo/main.cpp
        intermediate/PointerArithmatics/main.cpp
        intermediate/Pointers/main.cpp
        intermediate/pointersPlus/main.cpp
        intermediate/Problem1/main.cpp
        intermediate/ReadTXTfile/main.cpp
        intermediate/SearchingString/main.cpp
        intermediate/SharedPointer/main.cpp
        intermediate/simple/main.cpp
        intermediate/StreamsExample/main.cpp
        intermediate/StringParsing/main.cpp
        intermediate/Strings/main.cpp
        intermediate/Structures/main.cpp
        intermediate/StructureWithMethod/main.cpp
        intermediate/TwoDimensionalArray/main.cpp
        intermediate/UniquePointers/main.cpp
)
